--- a/Blog.csproj
+++ b/Blog.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="Dapper" Version="2.1.24" />
     <PackageReference Include="Dapper.Contrib" Version="2.0.78" />
     <PackageReference Include="Microsoft.Data.SqlClient" Version="5.1.2" />
+    <PackageReference Include="Scrypt.NET" Version="1.3.0" />
   </ItemGroup>
 
 </Project>
